force-app/main/default/objects/Contributor__c/fields/Contribution_Count__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Count__c</fullName>
    <label>Contribution Count</label>
    <description>Number of contributions made by this contributor</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>