force-app/main/default/objects/Contributor__c/fields/First_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Sync_Date__c</fullName>
    <label>First Sync Date</label>
    <type>Date</type>
</CustomField>