force-app/main/default/objects/Contributor__c/fields/GitHub_Username__c.field-meta.xml
<CustomField>
    <fullName>GitHub_Username__c</fullName>
    <label>GitHub Username</label>
    <type>Text</type>
    <length>80</length>
</CustomField>