force-app/main/default/objects/Contributor__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <label>Organization</label>
    <type>Text</type>
    <length>100</length>
</CustomField>