force-app/main/default/objects/Contributor__c/fields/Profile_URL__c.field-meta.xml
<CustomField>
    <fullName>Profile_URL__c</fullName>
    <label>Profile URL</label>
    <type>Url</type>
</CustomField>