force-app/main/default/objects/Contributor__c/fields/Repository__c.field-meta.xml
<CustomField>
    <fullName>Repository__c</fullName>
    <label>Repository</label>
    <description>Repository this contributor belongs to</description>
    <type>MasterDetail</type>
    <referenceTo>Repository__c</referenceTo>
    <relationshipLabel>Contributors</relationshipLabel>
    <relationshipName>Contributors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>